# dhall-build-system

./: .gitattributes  .gitignore  BUILD.dhall  Cargo.toml  README.md  SMELT.dhall  Smelt.dhall  compute.sh  store-reset.sh
.github/workflows/: rust.yml
cli/: main.rs
dhall/core/: Package.dhall  Rule.dhall
dhall/tool/gcc/: ToolRule.dhall  gcc.dhall
dhall/util/: Build.dhall  _XNode.dhall  module.dhall
examples/: BUILD.dhall  SMELT.dhall  Smelt.dhall  clean.sh
examples/chello/: .gitignore  BUILD.dhall  BUILD2.dhall  SMELT.dhall  SMELT2.dhall  Smelt.dhall  clean.sh  config.h  lib.c  lib.h  main.c
examples/multi-bin/: .gitignore  BUILD.dhall  BUILD.py  SMELT.dhall  SMELT.py  Smelt.dhall  clean.sh
examples/multi-bin/src/: cat.c
imports/: Smelt.dhall  SmeltNode.dhall  SmeltPackage.dhall  SmeltSchema.dhall  package.dhall  spaceJoin.dhall
imports/core/: Node.dhall  Package.dhall  Schema.dhall  core.dhall  package.dhall
imports/tool/: copy.dhall  package.dhall
imports/tool/gcc/: Binary.dhall  Config.dhall  Library.dhall  gcc.dhall  package.dhall
imports/util/: XNode.dhall  _expand.dhall  build.dhall  expand.dhall  getArtifacts.dhall  module.dhall  package.dhall  spaceJoin.dhall  util.dhall  workdir.dhall
python/: __init__.py  smelt
