[package]
name = "smelt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "smelt"
path = "cli/main.rs"

[dependencies]
anyhow = "1.0.69"
async-recursion = "1.0.4"
clap = { version = "4.1.13", features = ["derive"] }
dashmap = "5.4.0"
md5 = "0.7.0"
serde = "1.0.152"
serde_dhall = "0.12.1"
serde_json = "1.0.94"
tokio = { version = "1.27.0", features = ["full"] }
