[package]
name = "dhall-build-system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "dhall-build-system"
path = "cli/main.rs"

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.13", features = ["derive"] }
md5 = "0.7.0"
serde = "1.0.152"
serde_dhall = "0.12.1"
serde_json = "1.0.94"
